Fixed a bug with pattern.png

--- a/css/avocado.css
+++ b/css/avocado.css
@@ -267,7 +267,7 @@ body {
     width: 100%;
     height: 100%;
     z-index: 1;
-    background: url("http://webshope.in/projects/avocado/comingsoon/images/pattern.png") left top repeat;
+    background: url("../images/pattern.png") left top repeat;
 }
 /*--Buttons--*/
 
