--- a/NFV-DASHBOARD/views/partials/nfv-mon-menu.ejs
+++ b/NFV-DASHBOARD/views/partials/nfv-mon-menu.ejs
@@ -15,7 +15,7 @@
 
         <ul class="nav nav-main">
           <li>
-            <a href="#">
+            <a href="/">
               <i class="fas fa-list-alt" aria-hidden="true"></i>
               <span>Dashboard</span>
             </a>
@@ -27,7 +27,7 @@
             </a>
             <ul class="nav nav-children">
               <li>
-                <a href="tables-basic.html">
+                <a href="/NFV-MON/kubernetes/resource-usage">
                   Show Resource Usages
                 </a>
               </li>
