Finished get resource usage page

--- a/NFV-DASHBOARD/assets/styles/custom.css
+++ b/NFV-DASHBOARD/assets/styles/custom.css
@@ -5,3 +5,26 @@
     font-size: 18px;
   }
 }
+
+
+form .form-group label {
+  color: white;
+  font-size: 13px;
+
+}
+
+.display-none{
+  display: none;
+
+}
+
+
+div.xAxis div.tickLabel {
+  transform: rotate(-90deg);
+  -ms-transform:rotate(-90deg); /* IE 9 */
+  -moz-transform:rotate(-90deg); /* Firefox */
+  -webkit-transform:rotate(-90deg); /* Safari and Chrome */
+  -o-transform:rotate(-90deg); /* Opera */
+  /*rotation-point:50% 50%;*/ /* CSS3 */
+  /*rotation:270deg;*/ /* CSS3 */
+}
