--- a/NFV-DASHBOARD/views/layouts/layout.ejs
+++ b/NFV-DASHBOARD/views/layouts/layout.ejs
@@ -79,7 +79,7 @@
           <nav>
             <ul class="nav nav-pills" id="mainNav">
               <li class="<%=(appName === "NFV-MON"?"active":"")%>">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="/">
                   NFV-MON
                 </a>
               </li>
