Just started to add NFV-BMS dashboard

--- a/NFV-DASHBOARD/views/layouts/layout.ejs
+++ b/NFV-DASHBOARD/views/layouts/layout.ejs
@@ -66,7 +66,7 @@
   <!-- start: header -->
   <header class="header header-nav-menu">
     <div class="logo-container">
-      <a href="../" class="logo">
+      <a href="/" class="logo">
         <img src="/images/logo-white-text-right.png" height="35" alt="Porto Admin"/>
       </a>
       <button class="btn header-btn-collapse-nav d-lg-none" data-toggle="collapse" data-target=".header-nav">
@@ -84,12 +84,12 @@
                 </a>
               </li>
               <li class="<%=(appName === "NFV-VMS"?"active":"")%>">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="">
                   NFV-VMS
                 </a>
               </li>
               <li class="<%=(appName === "NFV-BMS"?"active":"")%>">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="/nfv-bms/">
                   NFV-BMS
                 </a>
               </li>
