--- a/NFV-DASHBOARD/views/pages/nfv-bms/homepage.ejs
+++ b/NFV-DASHBOARD/views/pages/nfv-bms/homepage.ejs
@@ -25,11 +25,11 @@ block('localCustomStyles', '<link rel="stylesheet" href="/dependencies/select2/c
 
 <div class="row">
   <div class="col-lg-3 center">
-    <a href="/nfv-bms/ericsson-hss-fe/benchmark"><img src="/images/nfv-bms/ericsson-hss-fe/logo.png" width="50%"/></a><br/>
-    <div style="text-align: center; color: white; font-size: 16px; padding-top: 10px">Ericsson HSS Frontend Benchmark Tool Integration </div>
+    <a href="/nfv-bms/ericsson-hss-fe/benchmark"><img src="/images/nfv-bms/ericsson-hss-fe/logo.png" width="50%" style="max-width: 100px;"/></a><br/>
+    <div style="text-align: center; color: white; font-size: 16px; padding-top: 10px">Ericsson HSS Frontend <br/> Benchmark Tool Integration </div>
   </div>
   <div class="col-lg-3 center">
-    <a href="#"><img src="/images/nfv-bms/synthetic-workload-generator/logo.png" width="50%"/></a><br/>
-    <div style="text-align: center; color: white; font-size: 16px; padding-top: 10px">Synthetic Workload Generator Benchmark Tool Integration </div>
+    <a href="#"><img src="/images/nfv-bms/synthetic-workload-generator/logo.png" width="50%" style="max-width: 100px;"/></a><br/>
+    <div style="text-align: center; color: white; font-size: 16px; padding-top: 10px">Synthetic Workload Generator <br/> Benchmark Tool Integration </div>
   </div>
 </div>
