--- a/NFV-DASHBOARD/views/partials/nfv-bms-menu.ejs
+++ b/NFV-DASHBOARD/views/partials/nfv-bms-menu.ejs
@@ -24,12 +24,12 @@
           <li class="nav-parent">
             <a href="#">
               <i class="fas fa-table" aria-hidden="true"></i>
-              <span>Manage NFV System and VNFs</span>
+              <span>Manage NFV Deployments and VNFs</span>
             </a>
             <ul class="nav nav-children">
               <li>
-                <a href="#">
-                  Manage NFV System
+                <a href="/nfv-bms/manage-nfv-system-deployment">
+                  Manage NFV System Deployment
                 </a>
               </li>
               <li>
