--- a/NFV-DASHBOARD/views/pages/nfv-bms/manage-node-types.ejs
+++ b/NFV-DASHBOARD/views/pages/nfv-bms/manage-node-types.ejs
@@ -10,8 +10,7 @@
   '<script src="/dependencies/datatables/extras/TableTools/JSZip-2.5.0/jszip.min.js"></script>\n' +
   '<script src="/dependencies/datatables/extras/TableTools/pdfmake-0.1.32/pdfmake.min.js"></script>\n' +
   '<script src="/dependencies/datatables/extras/TableTools/pdfmake-0.1.32/vfs_fonts.js"></script>\n' +
-  '<script src="/js/nfv-bms/datatable.js"></script>\n' +
-  '<script src="/js/nfv-bms/manage-nfv-system-deployment.js"></script>\n');
+  '<script src="/js/nfv-bms/manage-node-types.js"></script>\n');
 
 block('localCustomStyles', '<link rel="stylesheet" href="/dependencies/select2/css/select2.css" />\n' +
   '<link rel="stylesheet" href="/dependencies/select2-bootstrap-theme/select2-bootstrap.min.css" />\n' +
@@ -26,7 +25,7 @@ block('localCustomStyles', '<link rel="stylesheet" href="/dependencies/select2/c
         <a href="#" class="card-action card-action-dismiss" data-card-dismiss></a>
       </div>
 
-      <h2 class="card-title">NFV Deployments</h2>
+      <h2 class="card-title">Node Types</h2>
     </header>
     <div class="card-body">
       <div class="row">
@@ -36,12 +35,12 @@ block('localCustomStyles', '<link rel="stylesheet" href="/dependencies/select2/c
           </div>
         </div>
       </div>
-      <table class="table table-bordered table-striped mb-0" id="datatable-editable" data-url="http://127.0.0.1:3001/api/deployments">
+      <table class="table table-bordered table-striped mb-0" id="datatable-editable" data-url="http://127.0.0.1:3001/api/node_types">
         <thead>
         <tr>
           <th class="id-column">ID</th>
-          <th>Name</th>
-          <th>Benchmarking Tool Integration Plugin ID</th>
+          <th>Node Type Name</th>
+          <th>NFV-VMS Integration Plugin Name</th>
           <th>Actions</th>
         </tr>
         </thead>
