--- a/NFV-DASHBOARD/views/pages/nfv-bms/manage-nodes.ejs
+++ b/NFV-DASHBOARD/views/pages/nfv-bms/manage-nodes.ejs
@@ -11,48 +11,66 @@
   '<script src="/dependencies/datatables/extras/TableTools/pdfmake-0.1.32/pdfmake.min.js"></script>\n' +
   '<script src="/dependencies/datatables/extras/TableTools/pdfmake-0.1.32/vfs_fonts.js"></script>\n' +
   '<script src="/js/nfv-bms/datatable.js"></script>\n' +
-  '<script src="/js/nfv-bms/manage-nfv-system-deployment.js"></script>\n');
+  '<script src="/js/nfv-bms/manage-nodes.js"></script>\n');
 
 block('localCustomStyles', '<link rel="stylesheet" href="/dependencies/select2/css/select2.css" />\n' +
   '<link rel="stylesheet" href="/dependencies/select2-bootstrap-theme/select2-bootstrap.min.css" />\n' +
   '<link rel="stylesheet" href="/dependencies/datatables/media/css/dataTables.bootstrap4.css" />\n');
 %>
+<header class="page-header">
+  <h2>Manage Nodes</h2>
 
-  <!-- start: page -->
-  <section class="card">
-    <header class="card-header">
-      <div class="card-actions">
-        <a href="#" class="card-action card-action-toggle" data-card-toggle></a>
-        <a href="#" class="card-action card-action-dismiss" data-card-dismiss></a>
-      </div>
+  <div class="right-wrapper text-right" style="margin-right: 20px">
+    <ol class="breadcrumbs">
+      <li>
+        <a href="/nfv-bms/">
+          <i class="fas fa-home"></i>
+        </a>
+      </li>
+      <li><span>Manage Deployments, VNFs &amp; Nodes</span></li>
+      <li><span>Nodes</span></li>
+    </ol>
 
-      <h2 class="card-title">NFV Deployments</h2>
-    </header>
-    <div class="card-body">
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="mb-3">
-            <button id="addToTable" class="btn btn-primary">Add <i class="fas fa-plus"></i></button>
-          </div>
+  </div>
+</header>
+
+<!-- start: page -->
+<section class="card">
+  <header class="card-header">
+    <div class="card-actions">
+      <a href="#" class="card-action card-action-toggle" data-card-toggle></a>
+      <a href="#" class="card-action card-action-dismiss" data-card-dismiss></a>
+    </div>
+
+    <h2 class="card-title">Nodes</h2>
+  </header>
+  <div class="card-body">
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="mb-3">
+          <button id="addToTable" class="btn btn-primary">Add <i class="fas fa-plus"></i></button>
         </div>
       </div>
-      <table class="table table-bordered table-striped mb-0" id="datatable-editable" data-url="http://127.0.0.1:3001/api/deployments">
-        <thead>
-        <tr>
-          <th class="id-column">ID</th>
-          <th>Name</th>
-          <th>Benchmarking Tool Integration Plugin ID</th>
-          <th>Actions</th>
-        </tr>
-        </thead>
-        <tbody>
-
-
-        </tbody>
-      </table>
     </div>
-  </section>
-  <!-- end: page -->
+    <table class="table table-bordered table-striped mb-0" id="datatable-editable"
+           data-url="http://127.0.0.1:3001/api/nodes">
+      <thead>
+      <tr>
+        <th class="id-column">ID</th>
+        <th>Node Type ID</th>
+        <th>Name</th>
+        <th>VNF ID</th>
+        <th>Actions</th>
+      </tr>
+      </thead>
+      <tbody>
+
+
+      </tbody>
+    </table>
+  </div>
+</section>
+<!-- end: page -->
 
 <div id="dialog" class="modal-block mfp-hide">
   <section class="card">
@@ -76,3 +94,4 @@ block('localCustomStyles', '<link rel="stylesheet" href="/dependencies/select2/c
     </footer>
   </section>
 </div>
+
