--- a/NFV-DASHBOARD/views/pages/nfv-bms/manage-vnfs-resource-requirements.ejs
+++ b/NFV-DASHBOARD/views/pages/nfv-bms/manage-vnfs-resource-requirements.ejs
@@ -11,13 +11,28 @@
   '<script src="/dependencies/datatables/extras/TableTools/pdfmake-0.1.32/pdfmake.min.js"></script>\n' +
   '<script src="/dependencies/datatables/extras/TableTools/pdfmake-0.1.32/vfs_fonts.js"></script>\n' +
   '<script src="/js/nfv-bms/datatable.js"></script>\n' +
-  '<script src="/js/nfv-bms/manage-nfv-system-deployment.js"></script>\n');
+  '<script src="/js/nfv-bms/manage-vnfs-resource-requirements.js"></script>\n');
 
 block('localCustomStyles', '<link rel="stylesheet" href="/dependencies/select2/css/select2.css" />\n' +
   '<link rel="stylesheet" href="/dependencies/select2-bootstrap-theme/select2-bootstrap.min.css" />\n' +
   '<link rel="stylesheet" href="/dependencies/datatables/media/css/dataTables.bootstrap4.css" />\n');
 %>
+<header class="page-header">
+  <h2>Manage VNFs Resource Requirements</h2>
 
+  <div class="right-wrapper text-right" style="margin-right: 20px">
+    <ol class="breadcrumbs">
+      <li>
+        <a href="/nfv-bms/">
+          <i class="fas fa-home"></i>
+        </a>
+      </li>
+      <li><span>Deployments, VNFs &amp; Nodes</span></li>
+      <li><span>Manage VNFs Resource Requirements</span></li>
+    </ol>
+
+  </div>
+</header>
   <!-- start: page -->
   <section class="card">
     <header class="card-header">
@@ -26,7 +41,7 @@ block('localCustomStyles', '<link rel="stylesheet" href="/dependencies/select2/c
         <a href="#" class="card-action card-action-dismiss" data-card-dismiss></a>
       </div>
 
-      <h2 class="card-title">NFV Deployments</h2>
+      <h2 class="card-title">VNFs Resource Requirements</h2>
     </header>
     <div class="card-body">
       <div class="row">
@@ -36,12 +51,14 @@ block('localCustomStyles', '<link rel="stylesheet" href="/dependencies/select2/c
           </div>
         </div>
       </div>
-      <table class="table table-bordered table-striped mb-0" id="datatable-editable" data-url="http://127.0.0.1:3001/api/deployments">
+      <table class="table table-bordered table-striped mb-0" id="datatable-editable" data-url="http://127.0.0.1:3001/api/vnfs_resource_requirements">
         <thead>
         <tr>
           <th class="id-column">ID</th>
-          <th>Name</th>
-          <th>Benchmarking Tool Integration Plugin ID</th>
+          <th>VNF ID</th>
+          <th>Resource Type ID</th>
+          <th>Minimum Capacity</th>
+          <th>Maximum Capacity</th>
           <th>Actions</th>
         </tr>
         </thead>
