--- a/NFV-DASHBOARD/views/partials/nfv-bms-menu.ejs
+++ b/NFV-DASHBOARD/views/partials/nfv-bms-menu.ejs
@@ -24,7 +24,7 @@
           <li class="nav-parent">
             <a href="#">
               <i class="fas fa-table" aria-hidden="true"></i>
-              <span>Manage NFV Deployments and VNFs</span>
+              <span>Manage Deployments, VNFs and Nodes</span>
             </a>
             <ul class="nav nav-children">
               <li>
@@ -33,12 +33,27 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/nfv-bms/manage-node-types">
+                  Manage Node Types
+                </a>
+              </li>
+              <li>
+                <a href="/nfv-bms/manage-vnfs">
                   Manage VNFs
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/nfv-bms/manage-vnfs-resource-requirements">
+                  Manage VNFs Resource Requirements
+                </a>
+              </li>
+              <li>
+                <a href="/nfv-bms/manage-nodes">
+                  Manage Nodes
+                </a>
+              </li>
+              <li>
+                <a href="/nfv-bms/manage-system-functions">
                   Manage System Functions
                 </a>
               </li>
@@ -52,22 +67,32 @@
             </a>
             <ul class="nav nav-children">
               <li>
-                <a href="#">
-                  Manage QoS Metrics and Labels
+                <a href="/nfv-bms/manage-qos-metrics">
+                  Manage QoS Metrics
                 </a>
               </li>
               <li>
-                <a href="#">
-                  Manage Traffic Demands
+                <a href="/nfv-bms/manage-qos-metrics-labeling-configurations">
+                  Manage QoS Metrics Labeling Configs
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/nfv-bms/manage-qos-metrics-labeling-configuration-values">
+                  Manage QoS Metrics Labeling Config Values
+                </a>
+              </li>
+              <li>
+                <a href="/nfv-bms/manage-traffic-demand-configurations">
+                  Manage Traffic Demand Configurations
+                </a>
+              </li>
+              <li>
+                <a href="/nfv-bms/manage-slas">
                   Manage Service Level Agreemnts
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/nfv-bms/manage-slos">
                   Manage Service Level Objectives
                 </a>
               </li>
@@ -81,13 +106,18 @@
             </a>
             <ul class="nav nav-children">
               <li>
-                <a href="#">
-                  View Resources
+                <a href="/nfv-bms/manage-resource-types">
+                  Manage Resource Types
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/nfv-bms/manage-resource-allocation-policies">
                   Manage VNFs Resource Allocation Policies
+                </a>
+              </li>
+              <li>
+                <a href="/nfv-bms/manage-resource-allocation-policy-values">
+                  Manage VNFs Resource Allocation Policy Values
                 </a>
               </li>
             </ul>
@@ -96,17 +126,17 @@
           <li class="nav-parent">
             <a href="#">
               <i class="fas fa-table" aria-hidden="true"></i>
-              <span>VNFs Placement Policy</span>
+              <span>Nodes Placement Policy</span>
             </a>
             <ul class="nav nav-children">
               <li>
-                <a href="#">
-                  View Nodes
+                <a href="/nfv-bms/manage-nodes-placement-configuration-policies">
+                  Manage VNF Placement Configuration Policies
                 </a>
               </li>
               <li>
-                <a href="#">
-                  Manage VNF Placement Policies Configurations
+                <a href="/nfv-bms/manage-nodes-placement-configuration-policy-values">
+                  Manage VNF Placement Configuration Policy Values
                 </a>
               </li>
             </ul>
@@ -156,6 +186,11 @@
             </a>
             <ul class="nav nav-children">
               <li>
+                <a href="/nfv-bms/manage-benchmarking-integration-plugins">
+                  Manage Benchmarking Integration Plugins
+                </a>
+              </li>
+              <li>
                 <a href="#">
                   Ericsson's HSS Frontend
                 </a>
@@ -174,7 +209,7 @@
             </a>
             <ul class="nav nav-children">
               <li>
-                <a href="#">
+                <a href="/nfv-bms/manage-experiment-sets">
                   Manage Experiment Set
                 </a>
               </li>
