--- a/NFV-DASHBOARD/views/partials/nfv-bms-menu.ejs
+++ b/NFV-DASHBOARD/views/partials/nfv-bms-menu.ejs
@@ -102,7 +102,7 @@
           <li class="nav-parent">
             <a href="#">
               <i class="fas fa-table" aria-hidden="true"></i>
-              <span>VNFs Resource Allocation Policy</span>
+              <span>Nodes Resource Allocation Policy</span>
             </a>
             <ul class="nav nav-children">
               <li>
@@ -112,12 +112,12 @@
               </li>
               <li>
                 <a href="/nfv-bms/manage-resource-allocation-policies">
-                  Manage VNFs Resource Allocation Policies
+                  Manage Resource Allocation Policies
                 </a>
               </li>
               <li>
                 <a href="/nfv-bms/manage-resource-allocation-policy-values">
-                  Manage VNFs Resource Allocation Policy Values
+                  Manage Resource Allocation Policy Values
                 </a>
               </li>
             </ul>
@@ -214,8 +214,13 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/nfv-bms/manage-experiments">
                   Manage Experiments
+                </a>
+              </li>
+              <li>
+                <a href="/nfv-bms/manage-experiments-nodes-configurations">
+                  Manage Experiments Nodes Configurations
                 </a>
               </li>
             </ul>
