Fixed many bugs in NFV-Dashboard, also added start/check experiments feature

--- a/NFV-DASHBOARD/views/layouts/layout.ejs
+++ b/NFV-DASHBOARD/views/layouts/layout.ejs
@@ -84,7 +84,7 @@
                 </a>
               </li>
               <li class="<%=(appName === "NFV-VMS"?"active":"")%>">
-                <a class="nav-link" href="">
+                <a class="nav-link" href="http://172.16.16.227:3000/explorer/">
                   NFV-VMS
                 </a>
               </li>
@@ -94,7 +94,7 @@
                 </a>
               </li>
               <li class="<%=(appName === "NFV-LAB"?"active":"")%>">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="/nfv-lab/">
                   NFV-LAB
                 </a>
               </li>
