--- a/NFV-DASHBOARD/views/partials/nfv-bms-menu.ejs
+++ b/NFV-DASHBOARD/views/partials/nfv-bms-menu.ejs
@@ -223,6 +223,11 @@
                   Manage Experiments Nodes Configurations
                 </a>
               </li>
+              <li>
+                <a href="/nfv-bms/view-experiments-results">
+                  View Experiments Results
+                </a>
+              </li>
             </ul>
           </li>
 
