--- a/NFV-DASHBOARD/views/partials/nfv-mon-menu.ejs
+++ b/NFV-DASHBOARD/views/partials/nfv-mon-menu.ejs
@@ -23,7 +23,7 @@
           <li class="nav-parent">
             <a href="#">
               <i class="fas fa-table" aria-hidden="true"></i>
-              <span>Kubernetes</span>
+              <span>Kubernetes Nodes Resource Usages</span>
             </a>
             <ul class="nav nav-children">
               <li>
@@ -36,7 +36,7 @@
           <li class="nav-parent">
             <a href="#">
               <i class="fas fa-map-marker-alt" aria-hidden="true"></i>
-              <span>OpenStack</span>
+              <span>OpenStack Nodes Resource Usage</span>
             </a>
             <ul class="nav nav-children">
               <li>
