Added some minor changes

--- a/NFV-DASHBOARD/views/pages/nfv-bms/manage-benchmarking-integration-plugins.ejs
+++ b/NFV-DASHBOARD/views/pages/nfv-bms/manage-benchmarking-integration-plugins.ejs
@@ -58,7 +58,7 @@ block('localCustomStyles', '<link rel="stylesheet" href="/dependencies/select2/c
       <tr>
         <th class="id-column">ID</th>
         <th>Name</th>
-        <th>Start Parameter</th>
+        <th>Start Endpoint</th>
         <th>Actions</th>
       </tr>
       </thead>
