--- a/NFV-DASHBOARD/views/pages/nfv-bms/manage-node-types.ejs
+++ b/NFV-DASHBOARD/views/pages/nfv-bms/manage-node-types.ejs
@@ -41,6 +41,7 @@ block('localCustomStyles', '<link rel="stylesheet" href="/dependencies/select2/c
           <th class="id-column">ID</th>
           <th>Node Type Name</th>
           <th>NFV-VMS Integration Plugin Name</th>
+          <th>getNodes Endpoint Name</th>
           <th>Actions</th>
         </tr>
         </thead>
