--- a/NFV-DASHBOARD/views/pages/nfv-bms/manage-nfv-system-deployment.ejs
+++ b/NFV-DASHBOARD/views/pages/nfv-bms/manage-nfv-system-deployment.ejs
@@ -36,7 +36,7 @@ block('localCustomStyles', '<link rel="stylesheet" href="/dependencies/select2/c
           </div>
         </div>
       </div>
-      <table class="table table-bordered table-striped mb-0" id="datatable-editable" data-url="http://127.0.0.1:3001/api/deployments">
+      <table class="table table-bordered table-striped mb-0" id="datatable-editable" data-url="http://<%=nfv_bms_address%>:<%=nfv_bms_port%>/api/deployments">
         <thead>
         <tr>
           <th class="id-column">ID</th>
