--- a/NFV-DASHBOARD/views/pages/nfv-bms/manage-node-types.ejs
+++ b/NFV-DASHBOARD/views/pages/nfv-bms/manage-node-types.ejs
@@ -35,7 +35,7 @@ block('localCustomStyles', '<link rel="stylesheet" href="/dependencies/select2/c
           </div>
         </div>
       </div>
-      <table class="table table-bordered table-striped mb-0" id="datatable-editable" data-url="http://127.0.0.1:3001/api/node_types">
+      <table class="table table-bordered table-striped mb-0" id="datatable-editable" data-url="http://<%=nfv_bms_address%>:<%=nfv_bms_port%>/api/node_types">
         <thead>
         <tr>
           <th class="id-column">ID</th>
