--- a/NFV-DASHBOARD/views/pages/nfv-bms/manage-qos-metrics.ejs
+++ b/NFV-DASHBOARD/views/pages/nfv-bms/manage-qos-metrics.ejs
@@ -53,7 +53,7 @@ block('localCustomStyles', '<link rel="stylesheet" href="/dependencies/select2/c
       </div>
     </div>
     <table class="table table-bordered table-striped mb-0" id="datatable-editable"
-           data-url="http://127.0.0.1:3001/api/quality_metrics">
+           data-url="http://<%=nfv_bms_address%>:<%=nfv_bms_port%>/api/quality_metrics">
       <thead>
       <tr>
         <th class="id-column">ID</th>
