--- a/NFV-DASHBOARD/views/pages/nfv-bms/manage-resource-types.ejs
+++ b/NFV-DASHBOARD/views/pages/nfv-bms/manage-resource-types.ejs
@@ -53,7 +53,7 @@ block('localCustomStyles', '<link rel="stylesheet" href="/dependencies/select2/c
       </div>
     </div>
     <table class="table table-bordered table-striped mb-0" id="datatable-editable"
-           data-url="http://<%=nfv_bms_address%>:<%=nfv_bms_port%>/api/resource_types">
+           data-url="http://<%=sails.config.custom.nfv_bms_address%>:<%=sails.config.custom.nfv_bms_port%>/api/resource_types">
       <thead>
       <tr>
         <th class="id-column">ID</th>
