--- a/NFV-DASHBOARD/views/pages/nfv-bms/manage-vnfs-resource-requirements.ejs
+++ b/NFV-DASHBOARD/views/pages/nfv-bms/manage-vnfs-resource-requirements.ejs
@@ -51,7 +51,7 @@ block('localCustomStyles', '<link rel="stylesheet" href="/dependencies/select2/c
           </div>
         </div>
       </div>
-      <table class="table table-bordered table-striped mb-0" id="datatable-editable" data-url="http://<%=nfv_bms_address%>:<%=nfv_bms_port%>/api/vnfs_resource_requirements">
+      <table class="table table-bordered table-striped mb-0" id="datatable-editable" data-url="http://<%=sails.config.custom.nfv_bms_address%>:<%=sails.config.custom.nfv_bms_port%>/api/vnfs_resource_requirements">
         <thead>
         <tr>
           <th class="id-column">ID</th>
